add the ride controller
