# src/app/api/employee/ride/route.ts
@@ -1,0 +1,15 @@
+import { NextRequest, NextResponse } from "next/server";
+import { createRide } from "@/lib/controllers/ride.controller";
+import { verifyToken } from "@/utils/middleware/auth";
+
+export async function POST(req: NextRequest) {
+  const auth = await verifyToken(req);
+  if (auth instanceof NextResponse) return auth; 
+
+  const body = await req.json();
+  const result = await createRide(body);
+
+  return NextResponse.json(result, {
+    status: result.success ? 200 : 400,
+  });
+}
